Pick Shortest Path does not work as expected with edge select in some cases in UV editor #99344

Closed
opened 2022-07-02 17:55:17 +02:00 by Daniel Gryningstjerna · 7 comments

System Information
Operating system: Windows-10-10.0.16299-SP0 64 Bits
Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-01 08:11, hash: bb8953ab49
Worked: has never worked correctly in this case as far as I know

Short description of error
Pick Shortest Path does not work as expected with edge select in some cases

Screenshot_3.png
current selection
current_selection.png
excpected selection
Expected selection.png
Current behavior in edit mode
Screenshot_5.png
Video of the issue:
Blender 2022-07-02 17_42_28_Trim.mp4
Exact steps for others to reproduce the error
add monkey primitiv
go to uv editing workspace
switch to edge select
use pick shortest path like in video
compare the behavior to edit mode
.blend file:
Shortest Path does not work as expected.blend

**System Information** Operating system: Windows-10-10.0.16299-SP0 64 Bits Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-01 08:11, hash: `bb8953ab49` Worked: has never worked correctly in this case as far as I know **Short description of error** Pick Shortest Path does not work as expected with edge select in some cases ![Screenshot_3.png](https://archive.blender.org/developer/F13249646/Screenshot_3.png) current selection ![current_selection.png](https://archive.blender.org/developer/F13249635/current_selection.png) excpected selection ![Expected selection.png](https://archive.blender.org/developer/F13249639/Expected_selection.png) Current behavior in edit mode ![Screenshot_5.png](https://archive.blender.org/developer/F13249665/Screenshot_5.png) Video of the issue: [Blender 2022-07-02 17_42_28_Trim.mp4](https://archive.blender.org/developer/F13249625/Blender_2022-07-02_17_42_28_Trim.mp4) **Exact steps for others to reproduce the error** add monkey primitiv go to uv editing workspace switch to edge select use pick shortest path like in video compare the behavior to edit mode .blend file: [Shortest Path does not work as expected.blend](https://archive.blender.org/developer/F13249624/Shortest_Path_does_not_work_as_expected.blend)

Added subscriber: @Dangry

Added subscriber: @Dangry
Daniel Gryningstjerna changed title from Pick Shortest Path does not work as expected with edge select in some cases to Pick Shortest Path does not work as expected with edge select in some cases in UV editor 2022-07-02 18:46:23 +02:00

Added subscriber: @APEC

Added subscriber: @APEC

Added subscriber: @sidd017

Added subscriber: @sidd017

Confirming as this is a known TODO from ffaaa0bcbf.

Confirming as this is a known TODO from ffaaa0bcbf47.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Siddhartha Jejurkar self-assigned this 2022-07-04 04:37:23 +02:00

This issue was referenced by 7725740543

This issue was referenced by 77257405437336dbd91a481926013f8c747cacae

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99344
No description provided.