UV: Edge support for select shortest path operator

Calculating shortest path selection in UV edge mode was done using vertex
path logic. Since the UV editor now supports proper edge selection [0],
this approach can sometimes give incorrect results.

This problem is now fixed by adding separate logic to calculate the
shortest path in UV edge mode.

Resolves T99344.

[0]: ffaaa0bcbf477c30cf3665b9330bbbb767397169

Reviewed By: campbellbarton

Ref D15511.